Use fewer string comparisons since they are slow in LuaTeX (fixes #174)

--- a/l3kernel/l3keys.dtx
+++ b/l3kernel/l3keys.dtx
@@ -2776,6 +2776,10 @@
 %    of groups which apply to a key with the list of those which have been
 %    set active. That requires two mappings, and again a different outcome
 %    depending on whether opt-in or opt-out is set.
+%    We cannot replace the clist mapping by \cs{clist_if_in:NnTF} because
+%    catcodes may not be the same; they cannot be normalized easily in the
+%    clist because of the remote possibility that some items need braces
+%    if they involve commas or leading/trailing spaces.
 %    \begin{macrocode}
 \cs_new_protected:Npn \@@_check_groups:
   {
