--- a/l3kernel/l3regex.dtx
+++ b/l3kernel/l3regex.dtx
@@ -1574,7 +1574,7 @@
       \tl_put_right:Nx \l_@@_internal_a_tl
         {
           \exp_after:wN \@@_escape_loop:N \g_@@_internal_tl
-          { break } \prg_break_point:
+          \scan_stop: \prg_break_point:
         }
       \exp_after:wN
     \group_end:
@@ -1620,7 +1620,7 @@
 %
 % \begin{macro}
 %   {
-%     \@@_escape_break:w, \@@_escape_/break:w,
+%     \@@_escape_\scan_stop::w, \@@_escape_/\scan_stop::w,
 %     \@@_escape_/a:w, \@@_escape_/e:w, \@@_escape_/f:w,
 %     \@@_escape_/n:w, \@@_escape_/r:w, \@@_escape_/t:w
 %   }
@@ -1630,8 +1630,8 @@
 %   backslash.  Spaces are ignored, and |\a|, |\e|, |\f|, |\n|, |\r|,
 %   |\t| take their meaning here.
 %    \begin{macrocode}
-\cs_new_eq:NN \@@_escape_break:w \prg_break:
-\cs_new:cpn { @@_escape_/break:w }
+\cs_new_eq:cN { @@_escape_ \iow_char:N\\scan_stop: :w } \prg_break:
+\cs_new:cpn { @@_escape_/ \iow_char:N\\scan_stop: :w }
   {
     \__kernel_msg_expandable_error:nn { regex } { trailing-backslash }
     \prg_break:
@@ -1691,7 +1691,10 @@
 %    \begin{macrocode}
 \cs_new:Npn \@@_escape_x_test:N #1
   {
-    \str_if_eq:nnTF {#1} { break } { ; }
+    \if_meaning:w \scan_stop: #1
+      \exp_after:wN \use_i:nnn \exp_after:wN ;
+    \fi:
+    \use:n
       {
         \if_charcode:w \c_space_token #1
           \exp_after:wN \@@_escape_x_test:N
@@ -1719,7 +1722,10 @@
 %    \begin{macrocode}
 \cs_new:Npn \@@_escape_x:N #1
   {
-    \str_if_eq:nnTF {#1} { break } { ; }
+    \if_meaning:w \scan_stop: #1
+      \exp_after:wN \use_i:nnn \exp_after:wN ;
+    \fi:
+    \use:n
       {
         \@@_hexadecimal_use:NTF #1
           { ; \@@_escape_loop:N }
@@ -1736,7 +1742,10 @@
 %    \begin{macrocode}
 \cs_new:Npn \@@_escape_x_loop:N #1
   {
-    \str_if_eq:nnTF {#1} { break }
+    \if_meaning:w \scan_stop: #1
+      \exp_after:wN \use_ii:nnn
+    \fi:
+    \use_ii:nn
       { ; \@@_escape_x_loop_error:n { } {#1} }
       {
         \@@_hexadecimal_use:NTF #1
