--- a/l3kernel/l3tl-analysis.dtx
+++ b/l3kernel/l3tl-analysis.dtx
@@ -75,11 +75,16 @@
 % In addition, there is a debugging function \cs{tl_analysis_show:n},
 % very similar to the \cs[no-index]{ShowTokens} macro from the \pkg{ted} package.
 %
-% \begin{function}[added = 2018-04-09]{\tl_analysis_show:N, \tl_analysis_show:n}
+% \begin{function}[added = 2021-05-11]
+%   {
+%     \tl_analysis_show:N, \tl_analysis_show:n,
+%     \tl_analysis_log:N, \tl_analysis_log:n
+%   }
 %   \begin{syntax}
 %     \cs{tl_analysis_show:n} \Arg{token list}
+%     \cs{tl_analysis_log:n} \Arg{token list}
 %   \end{syntax}
-%   Displays to the terminal the detailed decomposition of the
+%   Displays to the terminal (or log) the detailed decomposition of the
 %   \meta{token list} into tokens, showing the category code of each
 %   character token, the meaning of control sequences and active
 %   characters, and the value of registers.
@@ -978,26 +983,39 @@
 %
 % \subsection{Showing the results}
 %
-% \begin{macro}{\tl_analysis_show:N, \tl_analysis_show:n}
+% \begin{macro}{\tl_analysis_show:N, \tl_analysis_log:N, \@@_analysis_show:NNN}
 %   Add to \cs{@@_analysis:n} a third pass to display tokens to the terminal.
 %   If the token list variable is not defined, throw the same error
 %   as \cs{tl_show:N} by simply calling that function.
 %    \begin{macrocode}
-\cs_new_protected:Npn \tl_analysis_show:N #1
+\cs_new_protected:Npn \tl_analysis_show:N
+  { \@@_analysis_show:NNN \__kernel_msg_show:nnxxxx \tl_show:N }
+\cs_new_protected:Npn \tl_analysis_log:N
+  { \@@_analysis_show:NNN \__kernel_msg_log:nnxxxx \tl_log:N }
+\cs_new_protected:Npn \@@_analysis_show:NNN #1#2#3
   {
-    \tl_if_exist:NTF #1
+    \tl_if_exist:NTF #3
       {
-        \exp_args:No \@@_analysis:n {#1}
-        \__kernel_msg_show:nnxxxx { tl } { show-analysis }
-          { \token_to_str:N #1 } { \@@_analysis_show: } { } { }
+        \exp_args:No \@@_analysis:n {#3}
+        #1 { tl } { show-analysis }
+          { \token_to_str:N #3 } { \@@_analysis_show: } { } { }
       }
-      { \tl_show:N #1 }
+      { #2 #3 }
   }
-\cs_new_protected:Npn \tl_analysis_show:n #1
+%    \end{macrocode}
+% \end{macro}
+%
+% \begin{macro}{\tl_analysis_show:n, \tl_analysis_log:n, \@@_analysis_show:Nn}
+%   No existence test needed here.
+%    \begin{macrocode}
+\cs_new_protected:Npn \tl_analysis_show:n
+  { \@@_analysis_show:Nn \__kernel_msg_show:nnxxxx }
+\cs_new_protected:Npn \tl_analysis_log:n
+  { \@@_analysis_show:Nn \__kernel_msg_log:nnxxxx }
+\cs_new_protected:Npn \@@_analysis_show:Nn #1#2
   {
-    \@@_analysis:n {#1}
-    \__kernel_msg_show:nnxxxx { tl } { show-analysis }
-      { } { \@@_analysis_show: } { } { }
+    \@@_analysis:n {#2}
+    #1 { tl } { show-analysis } { } { \@@_analysis_show: } { } { }
   }
 %    \end{macrocode}
 % \end{macro}
