Implement \color_log:n to complement the show function (see #241)

--- a/l3kernel/l3color.dtx
+++ b/l3kernel/l3color.dtx
@@ -235,12 +235,13 @@
 %   it to be saved to a name.
 % \end{function}
 %
-% \begin{function}{\color_show:n}
+% \begin{function}[added = 2021-05-11]{\color_show:n, \color_log:n}
 %   \begin{syntax}
 %     \cs{color_show:n} \Arg{name}
+%     \cs{color_log:n} \Arg{name}
 %   \end{syntax}
 %   Displays the color specification stored in the \meta{name} on the
-%   terminal.
+%   terminal or log file.
 % \end{function}
 %
 % \section{Selecting colors}
@@ -2508,21 +2509,25 @@
 %
 % \subsection{Diagnostics}
 %
-% \begin{macro}{\color_show:n}
-% \begin{macro}{\@@_show:n}
+% \begin{macro}{\color_show:n, \color_log:n, \@@_show:Nn}
+% \begin{macro}[EXP]{\@@_show:n}
 %   Extract the information about a color and format for the user: the approach
 %   is similar to the keys module here.
 %    \begin{macrocode}
-\cs_new_protected:Npn \color_show:n #1
+\cs_new_protected:Npn \color_show:n
+  { \@@_show:Nn \__kernel_msg_show:nnxxxx }
+\cs_new_protected:Npn \color_log:n
+  { \@@_show:Nn \__kernel_msg_log:nnxxxx }
+\cs_new_protected:Npn \@@_show:Nn #1#2
   {
-    \__kernel_msg_show:nnxxxx { color } { show }
-      {#1}
+    #1 { color } { show }
+      {#2}
       {
-        \@@_if_defined:nT {#1}
+        \@@_if_defined:nT {#2}
           {
-            \exp_args:Nv \@@_show:n { l_@@_named_ #1 _tl }
+            \exp_args:Nv \@@_show:n { l_@@_named_ #2 _tl }
             \prop_map_function:cN
-              { l_@@_named_ #1 _prop }
+              { l_@@_named_ #2 _prop }
               \msg_show_item_unbraced:nn
           }
       }
