--- a/l3kernel/l3msg.dtx
+++ b/l3kernel/l3msg.dtx
@@ -1761,6 +1761,7 @@
 % \begin{macro}
 %   {
 %     \__kernel_msg_log:nnnnnn, \__kernel_msg_log:nnxxxx,
+%     \__kernel_msg_term:nnnnnn, \__kernel_msg_term:nnxxxx,
 %     \__kernel_msg_show:nnnnnn, \__kernel_msg_show:nnxxxx
 %   }
 %   For showing messages.
@@ -1768,6 +1769,9 @@
 \cs_new_protected:Npn \__kernel_msg_log:nnnnnn #1
   { \msg_log:nnnnnn { LaTeX / #1 } }
 \cs_generate_variant:Nn \__kernel_msg_log:nnnnnn { nnxxxx }
+\cs_new_protected:Npn \__kernel_msg_term:nnnnnn #1
+  { \msg_term:nnnnnn { LaTeX / #1 } }
+\cs_generate_variant:Nn \__kernel_msg_term:nnnnnn { nnxxxx }
 \cs_new_protected:Npn \__kernel_msg_show:nnnnnn #1
   { \msg_show:nnnnnn { LaTeX / #1 } }
 \cs_generate_variant:Nn \__kernel_msg_show:nnnnnn { nnxxxx }
