Report the number of added braces in regex split/extract (see #377)

--- a/l3kernel/l3regex.dtx
+++ b/l3kernel/l3regex.dtx
@@ -6307,8 +6307,8 @@
 % \end{variable}
 %
 % \begin{variable}{@@_begin, @@_end}
-%   Those flags are raised to indicate extra begin-group
-%   or end-group tokens when extracting submatches.
+%   Those flags are raised to indicate begin-group or end-group tokens
+%   that had to be added when extracting submatches.
 %    \begin{macrocode}
 \flag_new:n { @@_begin }
 \flag_new:n { @@_end }
@@ -6547,17 +6547,17 @@
             { \l_@@_submatch_int - 1 }
         }
         \@@_extract_seq_aux:n
-      \int_compare:nNnF
-        {
-          \flag_height:n { @@_begin } +
-          \flag_height:n { @@_end }
-        }
-          = 0
+      \int_set:Nn \l_@@_added_begin_int
+        { \flag_height:n { @@_begin } }
+      \int_set:Nn \l_@@_added_end_int
+        { \flag_height:n { @@_end } }
+      \int_compare:nNnT
+        { \l_@@_added_begin_int + \l_@@_added_end_int } > 0
         {
           \__kernel_msg_error:nnxxx { regex } { result-unbalanced }
             { splitting~or~extracting~submatches }
-            { \flag_height:n { @@_end } }
-            { \flag_height:n { @@_begin } }
+            { \int_use:N \l_@@_added_begin_int }
+            { \int_use:N \l_@@_added_end_int }
         }
       \seq_set_map_x:NNn \l_@@_internal_seq \l_@@_internal_seq {##1}
       \exp_args:NNNo
@@ -6581,13 +6581,19 @@
 \cs_new:Npn \@@_extract_seq_aux:ww #1; #2;
   {
     \if_int_compare:w #1 < 0 \exp_stop_f:
-      \flag_raise:n { @@_end }
-      \prg_replicate:nn {-#1} { \exp_not:n { { \if_false: } \fi: } }
+      \prg_replicate:nn {-#1}
+        {
+          \flag_raise:n { @@_begin }
+          \exp_not:n { { \if_false: } \fi: }
+        }
     \fi:
     \@@_query_submatch:n {#2}
     \if_int_compare:w #1 > 0 \exp_stop_f:
-      \flag_raise:n { @@_begin }
-      \prg_replicate:nn {#1} { \exp_not:n { \if_false: { \fi: } } }
+      \prg_replicate:nn {#1}
+        {
+          \flag_raise:n { @@_end }
+          \exp_not:n { \if_false: { \fi: } }
+        }
     \fi:
   }
 %    \end{macrocode}
