--- a/l3kernel/l3str-convert.dtx
+++ b/l3kernel/l3str-convert.dtx
@@ -824,7 +824,7 @@
             \file_if_exist:nTF { l3str-#2- \l_@@_internal_tl .def }
               {
                 \group_begin:
-                  \@@_load_catcodes:
+                  \cctab_select:N \c_code_cctab
                   \file_input:n { l3str-#2- \l_@@_internal_tl .def }
                 \group_end:
               }
@@ -878,32 +878,6 @@
   }
 %    \end{macrocode}
 % \end{macro}
-% \end{macro}
-%
-% \begin{macro}{\@@_load_catcodes:}
-%   Since encoding files may be loaded at arbitrary places in a \TeX{}
-%   document, including within verbatim mode, we set the catcodes of all
-%   characters appearing in any encoding definition file.
-%    \begin{macrocode}
-\cs_new_protected:Npn \@@_load_catcodes:
-  {
-    \char_set_catcode_escape:N \\
-    \char_set_catcode_group_begin:N \{
-    \char_set_catcode_group_end:N \}
-    \char_set_catcode_math_toggle:N \$
-    \char_set_catcode_alignment:N \&
-    \char_set_catcode_parameter:N \#
-    \char_set_catcode_math_superscript:N \^
-    \char_set_catcode_ignore:N \ %
-    \char_set_catcode_space:N \~
-    \tl_map_function:nN { abcdefghijklmnopqrstuvwxyz_:ABCDEFILNPSTUX }
-      \char_set_catcode_letter:N
-    \tl_map_function:nN { 0123456789"'?*+-.(),`!/<>[];= }
-      \char_set_catcode_other:N
-    \char_set_catcode_comment:N \%
-    \int_set:Nn \tex_endlinechar:D {32}
-  }
-%    \end{macrocode}
 % \end{macro}
 %
 % \subsubsection{Byte unescape and escape}
