Use the @@ notation instead of __module in a few places

--- a/l3kernel/l3debug.dtx
+++ b/l3kernel/l3debug.dtx
@@ -491,7 +491,7 @@
 %   \cs{clist_concat:NNN}''.
 %
 %   Instead of changing \emph{the} definition of the macros, we'll
-%   create a copy of such macros, say, |__debug_clist_concat:NNN| which
+%   create a copy of such macros, say, \cs[no-index]{@@_clist_concat:NNN} which
 %   will be defined as
 %   |<debug code with #1, #2 and #3>\clist_concat:NNN#1#2#3|. For that
 %   we need to identify the signature of every function and build the
@@ -569,8 +569,7 @@
 \__kernel_msg_new:nnn { debug } { bad-arg-type }
   { Wrong~argument~type~#1. }
 %    \end{macrocode}
-%   The macro below is a modifiec copy of
-%   |\__cs_generate_variant_loop_base:N| to get the base form of an
+%   The macro below gets the base form of an
 %   argument type given a variant. It serves only to differentiate
 %   arguments which should be braced from ones which shouldn't. If all
 %   were to be braced this would be unnecessary. I moved the |n| and |N|
@@ -647,7 +646,7 @@
         \tex_endlinechar:D -1 \scan_stop:
         \tl_map_inline:nn {#3}
           {
-            \cs_if_exist:cTF { __debug_ \cs_to_str:N ##1 }
+            \cs_if_exist:cTF { @@_ \cs_to_str:N ##1 }
               { \@@_add_to_debug_code:Nnn }
               { \@@_setup_debug_code:Nnn }
                 ##1 {#1} {#2}
@@ -656,7 +655,7 @@
     }
   \cs_set_protected:Npn \@@_setup_debug_code:Nnn #1#2#3
     {
-      \cs_gset_eq:cN { __debug_ \cs_to_str:N #1 } #1
+      \cs_gset_eq:cN { @@_ \cs_to_str:N #1 } #1
       \@@_generate_parameter_list:NNN #1 \l_@@_tmpa_tl \l_@@_tmpb_tl
       \exp_args:Nx \tex_scantokens:D
         {
@@ -665,7 +664,7 @@
           \tl_use:N \l_@@_tmpa_tl
             {
               \tl_to_str:n {#2}
-              \exp_not:c { __debug_ \cs_to_str:N #1 }
+              \exp_not:c { @@_ \cs_to_str:N #1 }
               \tl_use:N \l_@@_tmpb_tl
               \tl_to_str:n {#3}
             }
@@ -678,7 +677,7 @@
           \cs_set:Npn \exp_not:N \@@_tmp:w
             ####1 \tl_to_str:n { macro: }
             ####2 \tl_to_str:n { -> }
-            ####3 \c_backslash_str \tl_to_str:n { __debug_ }
+            ####3 \c_backslash_str \tl_to_str:n { @@_ }
                     \cs_to_str:N #1
             ####4 \s_@@_stop
             {
@@ -688,7 +687,7 @@
                   \tex_def:D \exp_not:N #1 ####2
                     {
                       ####3 \tl_to_str:n {#2}
-                      \c_backslash_str __debug_ \cs_to_str:N #1
+                      \c_backslash_str @@_ \cs_to_str:N #1
                       ####4 \tl_to_str:n {#3}
                     }
                 }
