--- a/l3kernel/l3msg.dtx
+++ b/l3kernel/l3msg.dtx
@@ -1991,7 +1991,7 @@
 \__kernel_msg_new:nnnn { quark } { invalid-function }
   { Quark~test~function~'#1'~is~invalid. }
   {
-    \c__msg_coding_error_text_tl
+    \c_@@_coding_error_text_tl
     LaTeX~has~been~asked~to~create~quark~test~function~'#1'~
     \tl_if_empty:nTF {#2}
       { but~that~name~ }
