--- a/l3kernel/l3keys.dtx
+++ b/l3kernel/l3keys.dtx
@@ -1666,14 +1666,14 @@
 %   Searching for a property means finding the last |.| in the input,
 %   and storing the text before and after it. Everything is turned into
 %   strings, so there is no problem using an \texttt{x}-type expansion. Since
-%   |\__keys_trim_spaces:n| will turn its argument into a string anyway, this
+%   \cs{@@_trim_spaces:n} will turn its argument into a string anyway, this
 %   function uses \cs{cs_set_nopar:Npx} instead of \cs{tl_set:Nx} to gain some
 %   speed.
 %    \begin{macrocode}
 \cs_new_protected:Npn \@@_property_find:n #1
   {
-    \cs_set_nopar:Npx \l__keys_property_str { \__keys_trim_spaces:n { #1 } }
-    \exp_after:wN \@@_property_find_auxi:w \l__keys_property_str
+    \cs_set_nopar:Npx \l_@@_property_str { \@@_trim_spaces:n { #1 } }
+    \exp_after:wN \@@_property_find_auxi:w \l_@@_property_str
       \s_@@_nil \@@_property_find_auxii:w
       . \s_@@_nil \@@_property_find_err:w
   }
@@ -1686,7 +1686,7 @@
     \@@_property_find_err:w
   {
     \cs_set_nopar:Npx \l_keys_path_str
-      { \str_if_empty:NF \l__keys_module_str { \l__keys_module_str / } #1 }
+      { \str_if_empty:NF \l_@@_module_str { \l_@@_module_str / } #1 }
     \@@_property_find_auxi:w #2 \s_@@_nil \@@_property_find_auxiii:w . \s_@@_nil
       \@@_property_find_auxiv:w
   }
@@ -1699,15 +1699,15 @@
     #1 \s_@@_nil \@@_property_find_auxiii:w
     \s_@@_mark \s_@@_nil \@@_property_find_auxiv:w
   {
-    \cs_set_nopar:Npx \l__keys_property_str { . #1 }
+    \cs_set_nopar:Npx \l_@@_property_str { . #1 }
     \cs_set_nopar:Npx \l_keys_path_str
-      { \exp_after:wN \__keys_trim_spaces:n \exp_after:wN { \l_keys_path_str } }
+      { \exp_after:wN \@@_trim_spaces:n \exp_after:wN { \l_keys_path_str } }
     \tl_set_eq:NN \l_keys_path_tl \l_keys_path_str
   }
 \cs_new_protected:Npn \@@_property_find_err:w
     #1 \s_@@_nil #2 \@@_property_find_err:w
   {
-    \str_clear:N \l__keys_property_str
+    \str_clear:N \l_@@_property_str
     \__kernel_msg_error:nnn { keys } { no-property } {#1}
   }
 %    \end{macrocode}
