Document that clists/quarks are particular token lists (fixes #791)
This means that \tl_set_eq:NN can be used to set a token list equal
to a comma list.  Strings also are token lists, but this was already
documented.

--- a/l3kernel/l3quark.dtx
+++ b/l3kernel/l3quark.dtx
@@ -55,7 +55,8 @@
 %
 % \section{Quarks}
 %
-% Quarks are control sequences that expand to themselves and should
+% Quarks are control sequences (and in fact, token lists) that expand
+% to themselves and should
 % therefore \emph{never} be executed directly in the code.
 % This would result in an endless loop!
 %
@@ -90,8 +91,6 @@
 % \cs{tl_if_eq:NNTF}. A set of special quark testing functions is set up
 % below. All the quark testing functions are expandable although the
 % ones testing only single tokens are much faster.
-% An example of the quark testing functions and their use in recursion
-% can be seen in the implementation of \cs{clist_map_function:NN}.
 %
 % \section{Defining quarks}
 %
