Revert "add get_results and get_time, change name to get_ops"
This reverts commit 3261abbd47c2a967e12feee0f868e297b4e2bbdc.

--- a/l3experimental/l3benchmark/l3benchmark.dtx
+++ b/l3experimental/l3benchmark/l3benchmark.dtx
@@ -83,28 +83,9 @@
 %   with side-effects may cause problems.
 % \end{function}
 %
-% \begin{function}{\benchmark_get_results:nNN}
+% \begin{function}{\benchmark_set_fp_to_ops:nN}
 %   \begin{syntax}
-%     \cs{benchmark_get_results:nNN} \Arg{code} \meta{fp~var_1} \meta{fp~var_2}
-%   \end{syntax}
-%   Locally sets \meta{fp~var_1} to the time taken by \TeX{} to run the
-%   \meta{code}, and \meta{fp~var_2} to an estimated number of elementary
-%   operations.  The \meta{code} may be run many times and not within a
-%   group.
-% \end{function}
-%
-% \begin{function}{\benchmark_get_time:nN}
-%   \begin{syntax}
-%     \cs{benchmark_get_ops:nN} \Arg{code} \meta{fp~var}
-%   \end{syntax}
-%   Locally sets \meta{fp~var} to the time taken by \TeX{} to run the
-%   \meta{code}.  The \meta{code} may be run many times and not within a
-%   group.
-% \end{function}
-%
-% \begin{function}{\benchmark_get_ops:nN}
-%   \begin{syntax}
-%     \cs{benchmark_get_ops:nN} \Arg{code} \meta{fp~var}
+%     \cs{benchmark_set_fp_to_ops:nN} \Arg{code} \meta{fp~var}
 %   \end{syntax}
 %   Locally sets \meta{fp~var} to the estimated number of elementary
 %   operations needed to run \meta{code}.  The \meta{code} may be run many
@@ -320,42 +301,30 @@
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}{@@_benchmark:Nn}
-%   This function sets up some variables, the main work of benchmarking is
-%   done by \cs{@@_aux:}.
+% \begin{macro}{\benchmark:n}
+%   After setting up some variables the work is done by \cs{@@_aux:}.
 %    \begin{macrocode}
-\cs_new_protected:Npn \@@_benchmark:Nn #1#2
+\cs_new_protected:Npn \benchmark:n #1
   {
     \@@_measure_op:
-    \tl_gset:Nn \g_@@_code_tl {#2}
+    \tl_gset:Nn \g_@@_code_tl {#1}
     \@@_aux:
-    #1
+    \@@_display:
   }
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}{\benchmark:n}
-%    \begin{macrocode}
-\cs_new_protected:Npn \benchmark:n { \@@_benchmark:Nn \@@_display: }
-%    \end{macrocode}
-% \end{macro}
-%
-% \begin{macro}
-%   {
-%     \benchmark_get_results:nNN,
-%     \benchmark_get_time:nN,
-%     \benchmark_get_ops:nN
-%   }
-%   Same as \cs{benchmark:n} but store the results in user provided
-%   variables. the estimated number of operations in a
+% \begin{macro}{\benchmark_set_fp_to_ops:nN}
+%   Same as \cs{benchmark:n} but store the estimated number of operations in a
 %   user provided variable instead of displaying the results.
 %    \begin{macrocode}
-\cs_new_protected:Npn \benchmark_get_results:nNN
-  { \@@_benchmark:Nn \@@_store:NN }
-\cs_new_protected:Npn \benchmark_get_time:nN
-  { \@@_benchmark:Nn \@@_store_time:N }
-\cs_new_protected:Npn \benchmark_get_ops:nN
-  { \@@_benchmark:Nn \@@_store_ops:N }
+\cs_new_protected:Npn \benchmark_set_fp_to_ops:nN #1
+  {
+    \@@_measure_op:
+    \tl_gset:Nn \g_@@_code_tl {#1}
+    \@@_aux:
+    \@@_store_ops:N
+  }
 %    \end{macrocode}
 % \end{macro}
 %
@@ -478,18 +447,13 @@
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}{\@@_store:NN, \@@_store_time:N, \@@_store_ops:N}
-%   Functions to store the results in a variable.
+% \begin{macro}{\@@_store_ops:N}
+%   Function to store the estimated number of operations in a variable.
 %    \begin{macrocode}
-\cs_new_protected:Npn \@@_store:NN #1#2
-  {
-    \@@_store_time:N #1
-    \@@_store_ops:N  #2
-  }
-\cs_new_protected:Npn \@@_store_time:N #1
-  { \fp_set_eq:NN #1 \g_@@_time_fp }
 \cs_new_protected:Npn \@@_store_ops:N #1
-  { \fp_set:Nn #1 { \g_@@_time_fp / \g_@@_one_op_fp } }
+  {
+    \fp_set:Nn #1 { \g_@@_time_fp / \g_@@_one_op_fp }
+  }
 %    \end{macrocode}
 % \end{macro}
 %
