--- a/l3experimental/l3benchmark/l3benchmark.dtx
+++ b/l3experimental/l3benchmark/l3benchmark.dtx
@@ -63,6 +63,18 @@
 %   than this.
 % \end{variable}
 %
+% \begin{variable}{\g_benchmark_time_fp, \g_benchmark_ops_fp}
+%   These two variables store the results of the latest benchmark,
+%   \cs{g_benchmark_time_fp} stores the time \TeX{} took to run the
+%   benchmarked code, and \cs{g_benchmark_ops_fp} stores the estimated
+%   number of elementary operations.
+% \end{variable}
+%
+% \begin{variable}{\g_benchmark_silent_bool}
+%   If this variable is set \texttt{true}, the direct output to the
+%   terminal of \cs{benchmark:n} and \cs{benchmark_once:n} is suppressed.
+% \end{variable}
+%
 % \begin{function}{\benchmark_once:n}
 %   \begin{syntax}
 %     \cs{benchmark_once:n} \Arg{code}
@@ -126,6 +138,14 @@
 %    \begin{macrocode}
 \fp_new:N \g_benchmark_duration_target_fp
 \fp_gset:Nn \g_benchmark_duration_target_fp { 1 }
+%    \end{macrocode}
+% \end{variable}
+%
+% \begin{variable}{\g_benchmark_silent_bool}
+%   Output of \cs{benchmark:n} and \cs{benchmark_once:n} to the terminal
+%   might be suppressed by setting \cs{g_benchmark_silent_bool} true.
+%    \begin{macrocode}
+\bool_new:N \g_benchmark_silent_bool
 %    \end{macrocode}
 % \end{variable}
 %
@@ -232,13 +252,13 @@
 %
 % \subsubsection{Main benchmarking}
 %
-% \begin{variable}{\g_@@_time_fp, \g_@@_ops_fp}
+% \begin{variable}{\g_benchmark_time_fp, \g_benchmark_ops_fp}
 %   Functions such as \cs{benchmark:n} store the measured time in
 %   \cs{g_@@_time_fp} (in seconds) and the estimated number of
 %   operations in \cs{g_@@_ops_fp}.
 %    \begin{macrocode}
-\fp_new:N \g_@@_time_fp
-\fp_new:N \g_@@_ops_fp
+\fp_new:N \g_benchmark_time_fp
+\fp_new:N \g_benchmark_ops_fp
 %    \end{macrocode}
 % \end{variable}
 %
@@ -286,7 +306,7 @@
   {
     \@@_measure_op:
     \@@_raw:nN {#1} \g_@@_time_int
-    \fp_gset:Nn \g_@@_time_fp { \g_@@_time_int / 65536 }
+    \fp_gset:Nn \g_benchmark_time_fp { \g_@@_time_int / 65536 }
     \@@_display:
   }
 %    \end{macrocode}
@@ -355,7 +375,7 @@
       }
     \prg_break_point:
     \int_compare:nNnT \g_@@_time_int < 3 { \int_gzero:N \g_@@_time_int }
-    \fp_gset:Nn \g_@@_time_fp
+    \fp_gset:Nn \g_benchmark_time_fp
       { \g_@@_time_int / \g_@@_repeat_int / 65536 }
   }
 \cs_new_protected:Npn \@@_run:N
@@ -383,7 +403,7 @@
     \tl_gset:Nn \g_@@_code_tl
       { \int_gadd:Nn \g_@@_duration_int { 0 } }
     \@@_aux:
-    \fp_gset:Nn \g_@@_one_op_fp { max(\g_@@_time_fp, 1e-16) }
+    \fp_gset:Nn \g_@@_one_op_fp { max(\g_benchmark_time_fp, 1e-16) }
     \int_gset:Nn \g_@@_duration_int
       { \fp_to_int:n { 65536 * \g_benchmark_duration_target_fp } }
   }
@@ -414,11 +434,14 @@
 %    \begin{macrocode}
 \cs_new_protected:Npn \@@_display:
   {
-    \fp_gset:Nn \g_@@_ops_fp { \g_@@_time_fp / \g_@@_one_op_fp }
-    \iow_term:x
+    \fp_gset:Nn \g_benchmark_ops_fp { \g_benchmark_time_fp / \g_@@_one_op_fp }
+    \bool_if:NF \g_benchmark_silent_bool 
       {
-        \@@_fp_to_tl:N \g_@@_time_fp \c_space_tl seconds \c_space_tl
-        ( \@@_fp_to_tl:N \g_@@_ops_fp \c_space_tl ops)
+        \iow_term:x
+          {
+            \@@_fp_to_tl:N \g_benchmark_time_fp \c_space_tl seconds \c_space_tl
+            ( \@@_fp_to_tl:N \g_benchmark_ops_fp \c_space_tl ops)
+          }
       }
   }
 %    \end{macrocode}
@@ -468,13 +491,13 @@
 \cs_new_protected:Npn \@@_toc:
   {
     \int_gdecr:N \g_@@_tictoc_int
-    \fp_gset:Nn \g_@@_time_fp
+    \fp_gset:Nn \g_benchmark_time_fp
       { ( \sys_timer: - \l_@@_tictoc_pop_tl ) / 65536 }
     \iow_term:x
       {
         \@@_tictoc_prefix:
         TOC: \c_space_tl
-        \@@_fp_to_tl:N \g_@@_time_fp \c_space_tl s
+        \@@_fp_to_tl:N \g_benchmark_time_fp \c_space_tl s
       }
   }
 \msg_new:nnn { benchmark } { toc-first }
