Implement \prop_put_from_keyval:Nn (fixes #924)

--- a/l3kernel/l3prop.dtx
+++ b/l3kernel/l3prop.dtx
@@ -206,6 +206,33 @@
 %   other is discarded.
 % \end{function}
 %
+% \begin{function}[added = 2021-05-16]
+%   {
+%     \prop_put_from_keyval:Nn, \prop_put_from_keyval:cn,
+%     \prop_gput_from_keyval:Nn, \prop_gput_from_keyval:cn,
+%   }
+%   \begin{syntax}
+%     \cs{prop_put_from_keyval:Nn} \meta{prop~var}
+%       \{
+%         \meta{key1} |=| \meta{value1} |,|
+%         \meta{key2} |=| \meta{value2} |,| \ldots{}
+%       \}
+%   \end{syntax}
+%   Updates the \meta{prop~var} by adding entries for each key--value
+%   pair given in the second argument.  The addition is done through
+%   \cs{prop_put:Nnn}, hence if the \meta{prop~var} already contains
+%   some of the keys, the corresponding values are discarded and
+%   replaced by those given in the key--value list.  If duplicate keys
+%   appear in the key--value list then only one of the values is kept.
+%
+%   The function is equivalent to storing the key--value pairs in a
+%   temporary property variable using \cs{prop_set_from_keyval:Nn}, then
+%   combining \meta{prop~var} with the temporary variable using
+%   \cs{prop_concat:NNN}.  In particular, the \meta{keys} and
+%   \meta{values} are space-trimmed and unbraced as described in
+%   \cs{prop_set_from_keyval:Nn}.
+% \end{function}
+%
 % \section{Recovering values from property lists}
 %
 % \begin{function}[updated = 2011-08-28]
@@ -776,6 +803,8 @@
 % \begin{macro}{\prop_set_from_keyval:Nn, \prop_set_from_keyval:cn}
 % \begin{macro}{\prop_gset_from_keyval:Nn, \prop_gset_from_keyval:cn}
 % \begin{macro}{\prop_const_from_keyval:Nn, \prop_const_from_keyval:cn}
+% \begin{macro}{\prop_put_from_keyval:Nn, \prop_put_from_keyval:cn}
+% \begin{macro}{\prop_gput_from_keyval:Nn, \prop_gput_from_keyval:cn}
 % \begin{macro}
 %   {
 %     \@@_from_keyval:n,
@@ -828,6 +857,22 @@
     \prop_clear:N \l_@@_internal_prop
   }
 \cs_generate_variant:Nn \prop_const_from_keyval:Nn { c }
+\cs_new_protected:Npn \prop_put_from_keyval:Nn #1#2
+  {
+    \prop_set_eq:NN \l_@@_internal_prop #1
+    \@@_from_keyval:n {#2}
+    \prop_set_eq:NN #1 \l_@@_internal_prop
+    \prop_clear:N \l_@@_internal_prop
+  }
+\cs_generate_variant:Nn \prop_put_from_keyval:Nn { c }
+\cs_new_protected:Npn \prop_gput_from_keyval:Nn #1#2
+  {
+    \prop_set_eq:NN \l_@@_internal_prop #1
+    \@@_from_keyval:n {#2}
+    \prop_gset_eq:NN #1 \l_@@_internal_prop
+    \prop_clear:N \l_@@_internal_prop
+  }
+\cs_generate_variant:Nn \prop_gput_from_keyval:Nn { c }
 \cs_new_protected:Npn \@@_from_keyval:n #1
   {
     \@@_from_keyval_loop:w \prg_do_nothing: #1 ,
@@ -864,6 +909,8 @@
       }
   }
 %    \end{macrocode}
+% \end{macro}
+% \end{macro}
 % \end{macro}
 % \end{macro}
 % \end{macro}
