Implement \str_compare:nNnTF (fixes #927)

--- a/l3kernel/l3str.dtx
+++ b/l3kernel/l3str.dtx
@@ -401,6 +401,34 @@
 %   not be used within this string.
 % \end{function}
 %
+% \begin{function}[EXP, pTF, added = 2021-05-17]{\str_compare:nNn, \str_compare:eNe}
+%   \begin{syntax}
+%     \cs{str_compare_p:nNn} \Arg{tl_1} \meta{relation} \Arg{tl_2}
+%     \cs{str_compare:nNnTF} \Arg{tl_1} \meta{relation} \Arg{tl_2} \Arg{true code} \Arg{false code}
+%   \end{syntax}
+%   Compares the two \meta{token lists} on a character by character
+%   basis (namely after converting them to strings) in a lexicographic
+%   order according to the character codes of the characters.  The
+%   \meta{relation} can be |<|, |=|, or~|>| and the test is
+%   \texttt{true} under the following conditions:
+%   \begin{itemize}
+%     \item for |<|, if the first string is earlier than the second in lexicographic order;
+%     \item for |=|, if the two strings have exactly the same characters;
+%     \item for |>|, if the first string is later than the second in lexicographic order.
+%   \end{itemize}
+%   Thus for example the following is logically \texttt{true}:
+%   \begin{verbatim}
+%     \str_compare_p:nNn { ab } < { abc }
+%   \end{verbatim}
+%   \begin{texnote}
+%     This is a wrapper around the \TeX{} primitive
+%     \cs[index=pdfstrcmp]{(pdf)strcmp}.  It is meant for programming
+%     and not for sorting textual contents, as it simply considers
+%     character codes and not more elaborate considerations of grapheme
+%     clusters, locale, etc.
+%   \end{texnote}
+% \end{function}
+%
 % \section{Mapping over strings}
 %
 % All mappings are done at the current group level, \emph{i.e.}~any
@@ -1106,6 +1134,25 @@
 %   so we define a new name for it.
 %    \begin{macrocode}
 \cs_new_eq:NN \@@_if_eq:nn \tex_strcmp:D
+%    \end{macrocode}
+% \end{macro}
+%
+% \begin{macro}[pTF, EXP]{\str_compare:nNn, \str_compare:eNe}
+%   Simply rely on \cs{@@_if_eq:nn}, which expands to |-1|, |0|
+%   or~|1|.  The |ee| version is created directly because it is more efficient.
+%    \begin{macrocode}
+\prg_new_conditional:Npnn \str_compare:nNn #1#2#3 { p , T , F , TF }
+  {
+    \if_int_compare:w
+      \@@_if_eq:nn { \exp_not:n {#1} } { \exp_not:n {#3} }
+      #2 0 \exp_stop_f:
+      \prg_return_true: \else: \prg_return_false: \fi:
+  }
+\prg_new_conditional:Npnn \str_compare:eNe #1#2#3 { p , T , F , TF }
+  {
+    \if_int_compare:w \@@_if_eq:nn {#1} {#3} #2 0 \exp_stop_f:
+      \prg_return_true: \else: \prg_return_false: \fi:
+  }
 %    \end{macrocode}
 % \end{macro}
 %
