--- a/l3packages/xparse/xparse.dtx
+++ b/l3packages/xparse/xparse.dtx
@@ -1078,14 +1078,20 @@
 \clist_new:N \l_@@_options_clist
 \DeclareOption* { \clist_put_right:NV \l_@@_options_clist \CurrentOption }
 \ProcessOptions \relax
-\keys_define:nn { ltcmd }
+\cs_set_protected:Npn \@@_tmp:w #1
   {
-    log-declarations .bool_set:N = \l_@@_log_bool ,
-    log-declarations .initial:n  = false
+    \keys_define:nn { ltcmd }
+      {
+        log-declarations .bool_set:N = \l_@@_log_bool ,
+        log-declarations .initial:n  = false
+      }
+    \keys_set:nV { ltcmd } \l_@@_options_clist
+    \bool_if:NF \l_@@_log_bool
+      { \msg_redirect_module:nnn { LaTeX / ltcmd } { info } { none } }
   }
-\keys_set:nV { ltcmd } \l_@@_options_clist
-\bool_if:NF \l_@@_log_bool
-  { \msg_redirect_module:nnn { LaTeX / ltcmd } { info } { none } }
+\msg_if_exist:nnTF { cmd } { define-command }
+  { \@@_tmp:w { cmd } }
+  { \@@_tmp:w { ltcmd } }
 %    \end{macrocode}
 % \end{variable}
 % \end{variable}
