Format expandable errors like other errors (see #931)
I'm not adding to this commit a couple of LuaTeX-specific l3kernel tests,
because they are due to line length and I plan to shorten a few of the
error messages to avoid that in more cases.

--- a/l3trial/l3kernel-extras/l3kernel-extras.dtx
+++ b/l3trial/l3kernel-extras/l3kernel-extras.dtx
@@ -716,22 +716,22 @@
 %    \begin{macrocode}
 \sys_if_engine_luatex:T
   {
-    \cs_gset:Npx \__msg_expandable_error:n #1
+    \cs_gset:Npn \__msg_expandable_error:n #1
       {
-        \exp_not:N \tex_directlua:D
-          \exp_not:N \use:n
+        \__msg_expandable_error:w #1
+        \s__msg_mark . \s__msg_mark \s__msg_stop
+      }
+    \cs_gset:Npx \__msg_expandable_error:w
+        #1#2#3 . \s__msg_mark #4 \s__msg_stop
+      {
+        \exp_not:n { \exp_after:wN \exp_end: \tex_directlua:D \use:n }
             {
               {
-                tex.error
-                  ( "
-                    \exp_not:N \tex_luaescapestring:D
-                      { \exp_not:N \tl_to_str:n { LaTeX3~error:~#1} }
-                  " )
+                tex.error ( " \exp_not:N \tex_luaescapestring:D {#3} " )
                 \prg_replicate:nn { 50 } { ~ }
               }
             }
       }
-    \cs_undefine:N \__msg_expandable_error:w
   }
 %    \end{macrocode}
 %
