--- a/l3kernel/l3msg.dtx
+++ b/l3kernel/l3msg.dtx
@@ -2122,9 +2122,9 @@
 \__kernel_msg_new:nnn { prop } { prop-keyval }
   { Missing/extra~'='~in~'#1'~(in~'..._keyval:Nn') }
 \__kernel_msg_new:nnn { kernel } { unknown-comparison }
-  { Relation~'#1'~unknown:~use~=,~<,~>,~==,~!=,~<=,~>=. }
+  { Relation~'#1'~not~among~=,~<,~>,~==,~!=,~<=,~>=. }
 \__kernel_msg_new:nnn { kernel } { zero-step }
-  { Zero~step~size~for~step~function~#1. }
+  { Zero~step~size~for~function~#1. }
 \cs_if_exist:NF \tex_expanded:D
   {
     \__kernel_msg_new:nnn { kernel } { e-type }
