Implement info messages on the terminal as \msg_note:nnnnnn (fixes #911 again)
See commit 9a18a99855c08505dc24078ee33585cdf6198028 which had called it
\msg_info_term:nnnnnn

--- a/l3kernel/l3msg.dtx
+++ b/l3kernel/l3msg.dtx
@@ -285,7 +285,7 @@
 % \item \texttt{error}, interrupting the \TeX{} run without ending it;
 % \item \texttt{warning}, written to terminal and log, for important
 %   messages that may need the user's attention;
-% \item \texttt{info} and \texttt{info_term} for information messages
+% \item \texttt{info} and \texttt{note} for information messages
 %   written to the log or terminal;
 % \item \texttt{log} and \texttt{term} for un-decorated messages written
 %   to the log or terminal;
@@ -384,15 +384,15 @@
 %
 % \begin{function}[added = 2021-05-18]
 %   {
-%     \msg_info_term:nnnnnn ,
-%     \msg_info_term:nnnnn  ,
-%     \msg_info_term:nnnn   ,
-%     \msg_info_term:nnn    ,
-%     \msg_info_term:nn     ,
-%     \msg_info_term:nnxxxx ,
-%     \msg_info_term:nnxxx  ,
-%     \msg_info_term:nnxx   ,
-%     \msg_info_term:nnx    ,
+%     \msg_note:nnnnnn ,
+%     \msg_note:nnnnn  ,
+%     \msg_note:nnnn   ,
+%     \msg_note:nnn    ,
+%     \msg_note:nn     ,
+%     \msg_note:nnxxxx ,
+%     \msg_note:nnxxx  ,
+%     \msg_note:nnxx   ,
+%     \msg_note:nnx    ,
 %     \msg_info:nnnnnn ,
 %     \msg_info:nnnnn  ,
 %     \msg_info:nnnn   ,
@@ -404,13 +404,13 @@
 %     \msg_info:nnx
 %   }
 %   \begin{syntax}
-%     \cs{msg_info_term:nnnnnn} \Arg{module} \Arg{message} \Arg{arg one} \Arg{arg two} \Arg{arg three} \Arg{arg four}
+%     \cs{msg_note:nnnnnn} \Arg{module} \Arg{message} \Arg{arg one} \Arg{arg two} \Arg{arg three} \Arg{arg four}
 %     \cs{msg_info:nnnnnn} \Arg{module} \Arg{message} \Arg{arg one} \Arg{arg two} \Arg{arg three} \Arg{arg four}
 %   \end{syntax}
 %   Issues \meta{module} information \meta{message}, passing
 %   \meta{arg one} to \meta{arg four} to the text-creating functions.
 %   For the more common \cs{msg_info:nnnnnn}, the information text is
-%   added to the log file only, while \cs{msg_info_term:nnnnnn} adds the
+%   added to the log file only, while \cs{msg_note:nnnnnn} adds the
 %   info text to both the log file and the terminal.  The \TeX{} run is
 %   not interrupted.
 % \end{function}
@@ -579,7 +579,7 @@
 %   Changes the behaviour of messages of \meta{class one} so that they
 %   are processed using the code for those of \meta{class two}.
 %   Each \meta{class} can be one of \texttt{fatal}, \texttt{critical},
-%   \texttt{error}, \texttt{warning}, \texttt{info_term}, \texttt{info},
+%   \texttt{error}, \texttt{warning}, \texttt{note}, \texttt{info},
 %   \texttt{term}, \texttt{log}, \texttt{none}.
 % \end{function}
 %
@@ -1218,15 +1218,15 @@
 % \begin{macro}
 %   {
 %     \@@_info_aux:Nnn      ,
-%     \msg_info_term:nnnnnn ,
-%     \msg_info_term:nnnnn  ,
-%     \msg_info_term:nnnn   ,
-%     \msg_info_term:nnn    ,
-%     \msg_info_term:nn     ,
-%     \msg_info_term:nnxxxx ,
-%     \msg_info_term:nnxxx  ,
-%     \msg_info_term:nnxx   ,
-%     \msg_info_term:nnx    ,
+%     \msg_note:nnnnnn ,
+%     \msg_note:nnnnn  ,
+%     \msg_note:nnnn   ,
+%     \msg_note:nnn    ,
+%     \msg_note:nn     ,
+%     \msg_note:nnxxxx ,
+%     \msg_note:nnxxx  ,
+%     \msg_note:nnxx   ,
+%     \msg_note:nnx    ,
 %     \msg_info:nnnnnn ,
 %     \msg_info:nnnnn  ,
 %     \msg_info:nnnn   ,
@@ -1240,7 +1240,7 @@
 %   Information has no decoration and goes either to the log or both
 %   log and terminal.
 %    \begin{macrocode}
-  \@@_class_new:nn { info_term }
+  \@@_class_new:nn { note }
     {
       \@@_info_aux:Nnn \iow_term:n {#1}
         { \use:c { \c_@@_text_prefix_tl #1 / #2 } {#3} {#4} {#5} {#6} }
