Optimization: use \c_zero_int and \c_one_int
Many places had (explicit number) followed by \exp_stop_f:
from the time we had removed all integer constants \c_zero,
\c_one, ..., \c_sixteen etc.  Since we kept constants for
zero and one (under new names) we can replace 0 \exp_stop_f:
and 1 \exp_stop_f: by the faster constants.

--- a/l3kernel/l3fp-aux.dtx
+++ b/l3kernel/l3fp-aux.dtx
@@ -1222,7 +1222,7 @@
     \if_meaning:w 0 #1
       \exp_after:wN \@@_small_int_true:wTF
       \int_value:w \if_meaning:w 2 #5 - \fi:
-        \if_int_compare:w #2 > 0 \exp_stop_f:
+        \if_int_compare:w #2 > \c_zero_int
           1 0000 0000
         \else:
           #3
