--- a/l3kernel/l3fp-convert.dtx
+++ b/l3kernel/l3fp-convert.dtx
@@ -324,7 +324,7 @@
 \cs_new:Npn \@@_to_decimal_large:Nnnw #1#2#3#4;
   {
     \exp_after:wN \@@_trim_zeros:w \int_value:w
-      \if_int_compare:w #2 > 0 \exp_stop_f:
+      \if_int_compare:w #2 > \c_zero_int
         #2
       \fi:
       \exp_stop_f:
