--- a/l3kernel/l3candidates.dtx
+++ b/l3kernel/l3candidates.dtx
@@ -1694,7 +1694,7 @@
   { \@@_range_collect_unbraced:w #1 ; { } #2 }
 \cs_new:Npn \@@_range_collect_braced:w #1 ; #2#3
   {
-    \if_int_compare:w #1 > 1 \exp_stop_f:
+    \if_int_compare:w #1 > \c_one_int
       \exp_after:wN \@@_range_collect_braced:w
       \int_value:w \int_eval:n { #1 - 1 } \exp_after:wN ;
     \fi:
@@ -1702,7 +1702,7 @@
   }
 \cs_new:Npn \@@_range_collect_unbraced:w #1 ; #2#3
   {
-    \if_int_compare:w #1 > 1 \exp_stop_f:
+    \if_int_compare:w #1 > \c_one_int
       \exp_after:wN \@@_range_collect_unbraced:w
       \int_value:w \int_eval:n { #1 - 1 } \exp_after:wN ;
     \fi:
