--- a/l3kernel/l3fp-logic.dtx
+++ b/l3kernel/l3fp-logic.dtx
@@ -214,7 +214,7 @@
           \if_int_compare:w #4 < #1 - \fi: 1
         \fi:
       \else:
-        \if_int_compare:w #1#4 = 0 \exp_stop_f:
+        \if_int_compare:w #1#4 = \c_zero_int
           0
         \else:
           1
@@ -257,7 +257,7 @@
     \use_none:n #1
     \use_none:n #4
     \if_int_compare:w
-        \@@_compare_back_any:ww #1 #2 ; #4 #5 ; = 0 \exp_stop_f:
+        \@@_compare_back_any:ww #1 #2 ; #4 #5 ; = \c_zero_int
     \else:
       2 \exp_after:wN \prg_break:
     \fi:
