--- a/l3kernel/l3fp-parse.dtx
+++ b/l3kernel/l3fp-parse.dtx
@@ -1757,7 +1757,7 @@
       \if_meaning:w \scan_stop: #1
         \if_int_compare:w
             \@@_str_if_eq:nn { \s_@@ } { \exp_not:N #1 }
-            = 0 \exp_stop_f:
+            = \c_zero_int
           0
           \__kernel_msg_expandable_error:nnn
             { fp } { after-e } { floating~point~ }
@@ -1771,7 +1771,7 @@
       \else:
         \if_int_compare:w
             \@@_str_if_eq:nn { \int_value:w #1 } { \tex_the:D #1 }
-            = 0 \exp_stop_f:
+            = \c_zero_int
           \int_value:w #1
         \else:
           0
@@ -2265,7 +2265,7 @@
     \if_catcode:w \scan_stop: \exp_not:N #2
       \if_int_compare:w
           \@@_str_if_eq:nn { \s_@@_expr_mark } { \exp_not:N #2 }
-          = 0 \exp_stop_f:
+          = \c_zero_int
         \exp_after:wN \exp_after:wN
         \exp_after:wN \@@_parse_infix_mark:NNN
       \else:
@@ -2317,7 +2317,7 @@
     \if_catcode:w \scan_stop: \exp_not:N #2
       \if_int_compare:w
           \@@_str_if_eq:nn { \s_@@_expr_mark } { \exp_not:N #2 }
-          = 0 \exp_stop_f:
+          = \c_zero_int
         \exp_after:wN \exp_after:wN
         \exp_after:wN \@@_parse_infix_mark:NNN
       \else:
