--- a/l3kernel/l3fp-round.dtx
+++ b/l3kernel/l3fp-round.dtx
@@ -198,21 +198,21 @@
 \cs_new:Npn \@@_round_to_ninf:NNN #1 #2 #3
   {
     \if_meaning:w 2 #1
-      \if_int_compare:w #3 > 0 \exp_stop_f:
+      \if_int_compare:w #3 > \c_zero_int
         \@@_round_return_one:
       \fi:
     \fi:
-    0 \exp_stop_f:
+    \c_zero_int
   }
-\cs_new:Npn \@@_round_to_zero:NNN #1 #2 #3 { 0 \exp_stop_f: }
+\cs_new:Npn \@@_round_to_zero:NNN #1 #2 #3 { \c_zero_int }
 \cs_new:Npn \@@_round_to_pinf:NNN #1 #2 #3
   {
     \if_meaning:w 0 #1
-      \if_int_compare:w #3 > 0 \exp_stop_f:
+      \if_int_compare:w #3 > \c_zero_int
         \@@_round_return_one:
       \fi:
     \fi:
-    0 \exp_stop_f:
+    \c_zero_int
   }
 \cs_new:Npn \@@_round_to_nearest:NNN #1 #2 #3
   {
@@ -225,7 +225,7 @@
         \fi:
       \fi:
     \fi:
-    0 \exp_stop_f:
+    \c_zero_int
   }
 \cs_new:Npn \@@_round_to_nearest_ninf:NNN #1 #2 #3
   {
@@ -238,14 +238,14 @@
         \fi:
       \fi:
     \fi:
-    0 \exp_stop_f:
+    \c_zero_int
   }
 \cs_new:Npn \@@_round_to_nearest_zero:NNN #1 #2 #3
   {
     \if_int_compare:w #3 > \c_@@_five_int
       \@@_round_return_one:
     \fi:
-    0 \exp_stop_f:
+    \c_zero_int
   }
 \cs_new:Npn \@@_round_to_nearest_pinf:NNN #1 #2 #3
   {
@@ -258,7 +258,7 @@
         \fi:
       \fi:
     \fi:
-    0 \exp_stop_f:
+    \c_zero_int
   }
 \cs_new_eq:NN \@@_round:NNN \@@_round_to_nearest:NNN
 %    \end{macrocode}
@@ -286,7 +286,7 @@
       \if_int_odd:w 0 \if_meaning:w 0 #3 1 \fi:
                       \if_meaning:w 5 #3 1 \fi:
                 \exp_stop_f:
-        \if_int_compare:w \@@_int_eval:w #4 > 0 \exp_stop_f:
+        \if_int_compare:w \@@_int_eval:w #4 > \c_zero_int
           1 +
         \fi:
       \fi:
@@ -311,7 +311,7 @@
     \if_int_odd:w \if_meaning:w 0 #1 1 \else:
                   \if_meaning:w 5 #1 1 \else:
                   0 \fi: \fi: \exp_stop_f:
-      \if_int_compare:w \@@_int_eval:w #2 > 0 \exp_stop_f:
+      \if_int_compare:w \@@_int_eval:w #2 > \c_zero_int
         \@@_int_eval:w 1 +
       \fi:
     \fi:
@@ -350,10 +350,10 @@
 \cs_new_eq:NN \@@_round_to_ninf_neg:NNN \@@_round_to_pinf:NNN
 \cs_new:Npn \@@_round_to_zero_neg:NNN #1 #2 #3
   {
-    \if_int_compare:w #3 > 0 \exp_stop_f:
+    \if_int_compare:w #3 > \c_zero_int
       \@@_round_return_one:
     \fi:
-    0 \exp_stop_f:
+    \c_zero_int
   }
 \cs_new_eq:NN \@@_round_to_pinf_neg:NNN \@@_round_to_ninf:NNN
 \cs_new_eq:NN \@@_round_to_nearest_neg:NNN \@@_round_to_nearest:NNN
@@ -364,7 +364,7 @@
     \if_int_compare:w #3 < \c_@@_five_int \else:
       \@@_round_return_one:
     \fi:
-    0 \exp_stop_f:
+    \c_zero_int
   }
 \cs_new_eq:NN \@@_round_to_nearest_pinf_neg:NNN
   \@@_round_to_nearest_ninf:NNN
@@ -525,12 +525,12 @@
   {
     \exp_after:wN \@@_round_normal:NNwNnn
     \int_value:w \@@_int_eval:w
-      \if_int_compare:w #2 > 0 \exp_stop_f:
+      \if_int_compare:w #2 > \c_zero_int
         1 \int_value:w #2
         \exp_after:wN \@@_round_pack:Nw
         \int_value:w \@@_int_eval:w 1#3 +
       \else:
-        \if_int_compare:w #3 > 0 \exp_stop_f:
+        \if_int_compare:w #3 > \c_zero_int
           1 \int_value:w #3 +
         \fi:
       \fi:
