--- a/l3kernel/l3fp-trig.dtx
+++ b/l3kernel/l3fp-trig.dtx
@@ -1311,7 +1311,7 @@
         7 - \@@_int_eval:w
       \fi:
       \if_int_compare:w
-          \@@_ep_compare:wwww #2,#3; #5,#6; > 0 \exp_stop_f:
+          \@@_ep_compare:wwww #2,#3; #5,#6; > \c_zero_int
         3 -
         \exp_after:wN \@@_reverse_args:Nww
       \fi:
@@ -1398,7 +1398,7 @@
 %    \begin{macrocode}
 \cs_new:Npn \@@_atan_Taylor_loop:www #1; #2; #3;
   {
-    \if_int_compare:w #1 = -1 \exp_stop_f:
+    \if_int_compare:w #1 = - \c_one_int
       \@@_atan_Taylor_break:w
     \fi:
     \exp_after:wN \@@_fixed_div_int:wwN \c_@@_one_fixed_tl #1;
@@ -1550,7 +1550,7 @@
 \cs_new:Npn \@@_asin_normal_o:NfwNnnnnw
     #1#2#3 \s_@@ \@@_chk:w 1#4#5#6#7#8#9;
   {
-    \if_int_compare:w #5 < 1 \exp_stop_f:
+    \if_int_compare:w #5 < \c_one_int
       \exp_after:wN \@@_use_none_until_s:w
     \fi:
     \if_int_compare:w \@@_int_eval:w #5 + #6#7 + #8#9 = 1000 0001 ~
