--- a/l3kernel/l3tl-analysis.dtx
+++ b/l3kernel/l3tl-analysis.dtx
@@ -692,7 +692,7 @@
          plus \l_@@_analysis_type_int sp \scan_stop:
     \int_incr:N \l_@@_analysis_index_int
     \int_zero:N \l_@@_analysis_normal_int
-    \if_int_compare:w \l_@@_analysis_nesting_int = -1 \exp_stop_f:
+    \if_int_compare:w \l_@@_analysis_nesting_int = - \c_one_int
       \cs_set_eq:NN \@@_analysis_a_loop:w \scan_stop:
     \fi:
   }
@@ -738,7 +738,7 @@
   }
 \cs_new_protected:Npn \@@_analysis_a_cs:ww #1; #2;
   {
-    \if_int_compare:w #1 > 0 \exp_stop_f:
+    \if_int_compare:w #1 > \c_zero_int
       \tex_skip:D \l_@@_analysis_index_int
         = \int_eval:n { \l_@@_analysis_normal_int + 1 } sp \exp_stop_f:
       \tex_advance:D \l_@@_analysis_index_int #1 \exp_stop_f:
@@ -797,7 +797,7 @@
 %    \begin{macrocode}
 \cs_new:Npn \@@_analysis_b_normals:ww #1;
   {
-    \if_int_compare:w #1 = 0 \exp_stop_f:
+    \if_int_compare:w #1 = \c_zero_int
       \@@_analysis_b_special:w
     \fi:
     \@@_analysis_b_normal:wwN #1;
@@ -868,7 +868,7 @@
   {
     \exp_after:wN \@@_analysis_b_normals:ww
     \int_value:w \int_eval:w
-    \if_int_compare:w #1 = 0 \exp_stop_f:
+    \if_int_compare:w #1 = \c_zero_int
       #3
     \else:
       \tex_skip:D \int_eval:n { #4 + #1 } \exp_stop_f:
@@ -1039,7 +1039,7 @@
   {
     \use_none:n #2
     \iow_newline: > \use:nn { ~ } { ~ }
-    \if_int_compare:w "#2 = 0 \exp_stop_f:
+    \if_int_compare:w "#2 = \c_zero_int
       \exp_after:wN \@@_analysis_show_cs:n
     \else:
       \if_int_compare:w "#2 = 13 \exp_stop_f:
@@ -1224,10 +1224,10 @@
 \cs_new_protected:Npn \@@_peek_analysis_test:
   {
     \if_int_odd:w
-      \if_catcode:w \exp_not:N \l_peek_token {   0 \exp_stop_f: \fi:
-      \if_catcode:w \exp_not:N \l_peek_token }   0 \exp_stop_f: \fi:
-      \if_meaning:w \l_peek_token \c_space_token 0 \exp_stop_f: \fi:
-      1 \exp_stop_f:
+      \if_catcode:w \exp_not:N \l_peek_token {   \c_zero_int \fi:
+      \if_catcode:w \exp_not:N \l_peek_token }   \c_zero_int \fi:
+      \if_meaning:w \l_peek_token \c_space_token \c_zero_int \fi:
+      \c_one_int
       \exp_after:wN \exp_after:wN
       \exp_after:wN \@@_peek_analysis_normal:N
       \exp_after:wN \exp_not:N
