--- a/l3kernel/l3token.dtx
+++ b/l3kernel/l3token.dtx
@@ -1580,7 +1580,7 @@
 \cs_new:Npn \@@_generate_aux:w #1 ; #2 ;
   {
     \if_int_compare:w #2 = 10 \exp_stop_f:
-      \if_int_compare:w #1 =  0 \exp_stop_f:
+      \if_int_compare:w #1 =  \c_zero_int
         \__kernel_msg_expandable_error:nn { char } { null-space }
       \else:
         \__kernel_msg_expandable_error:nn { char } { space }
@@ -1595,7 +1595,7 @@
           { invalid-catcode }
       \else:
         \if_int_odd:w 0
-          \if_int_compare:w #1 < 0 \exp_stop_f: 1 \fi:
+          \if_int_compare:w #1 < \c_zero_int 1 \fi:
           \if_int_compare:w #1 > \c_max_char_int 1 \fi: \exp_stop_f:
           \__kernel_msg_expandable_error:nn { char }
             { out-of-range }
@@ -3143,10 +3143,10 @@ end
       \cs_new_protected:Npn \@@_execute_branches_N_type:
         {
           \if_int_odd:w
-              \if_catcode:w \exp_not:N \l_peek_token {   0 \exp_stop_f: \fi:
-              \if_catcode:w \exp_not:N \l_peek_token }   0 \exp_stop_f: \fi:
-              \if_meaning:w \l_peek_token \c_space_token 0 \exp_stop_f: \fi:
-              1 \exp_stop_f:
+              \if_catcode:w \exp_not:N \l_peek_token {   \c_zero_int \fi:
+              \if_catcode:w \exp_not:N \l_peek_token }   \c_zero_int \fi:
+              \if_meaning:w \l_peek_token \c_space_token \c_zero_int \fi:
+              \c_one_int
             \exp_after:wN \@@_N_type:w
               \token_to_meaning:N \l_peek_token
               \s_@@_mark \@@_N_type_aux:nnw
