--- a/l3trial/l3ldb/l3ldb.dtx
+++ b/l3trial/l3ldb/l3ldb.dtx
@@ -1038,13 +1038,13 @@
 %    \begin{macrocode}
 \cs_new_protected:Npn \trace_ldb:x #1
   {
-    \if_int_compare:w \g_trace_ldb_status > 0 \exp_stop_f:
+    \if_int_compare:w \g_trace_ldb_status > \c_zero_int
       \iow_term:x { LDB:~ #1 }
     \fi:
   }
 \cs_new_protected:Npn \trace_ldb_internal:x #1
   {
-    \if_int_compare:w \g_trace_ldb_status > 1 \exp_stop_f:
+    \if_int_compare:w \g_trace_ldb_status > \c_one_int
       \iow_term:x { LDB:~ #1 }
     \fi:
   }
