Optimize \tl_set_eq:NN and elementary register operations (fixes #932)

--- a/l3kernel/l3tl.dtx
+++ b/l3kernel/l3tl.dtx
@@ -1317,9 +1317,9 @@
 %   Error checking is sorted out by the parent function.
 %    \begin{macrocode}
 \cs_new_protected:Npn \tl_clear:N  #1
-  { \tl_set_eq:NN #1 \c_empty_tl }
+  { \tex_let:D #1 = ~ \c_empty_tl }
 \cs_new_protected:Npn \tl_gclear:N #1
-  { \tl_gset_eq:NN #1 \c_empty_tl }
+  { \tex_global:D \tex_let:D #1 ~ \c_empty_tl }
 \cs_generate_variant:Nn \tl_clear:N  { c }
 \cs_generate_variant:Nn \tl_gclear:N { c }
 %    \end{macrocode}
@@ -1344,10 +1344,13 @@
 % \begin{macro}{\tl_set_eq:NN, \tl_set_eq:Nc, \tl_set_eq:cN, \tl_set_eq:cc}
 % \begin{macro}{\tl_gset_eq:NN, \tl_gset_eq:Nc, \tl_gset_eq:cN, \tl_gset_eq:cc}
 %   For setting token list variables equal to each other.  To allow for
-%   patching, the arguments have to be explicit.
+%   patching, the arguments have to be explicit.  In addition this
+%   ensures that a braced second argument will not cause problems.
 %    \begin{macrocode}
-\cs_new_protected:Npn \tl_set_eq:NN  #1#2 { \cs_set_eq:NN #1 #2 }
-\cs_new_protected:Npn \tl_gset_eq:NN #1#2 { \cs_gset_eq:NN #1 #2 }
+\cs_new_protected:Npn \tl_set_eq:NN  #1#2
+  { \tex_let:D #1 = ~ #2 }
+\cs_new_protected:Npn \tl_gset_eq:NN #1#2
+  { \tex_global:D \tex_let:D #1 = ~ #2 }
 \cs_generate_variant:Nn \tl_set_eq:NN { cN, Nc, cc }
 \cs_generate_variant:Nn \tl_gset_eq:NN { cN, Nc, cc }
 %    \end{macrocode}
@@ -1404,14 +1407,9 @@
 %   created the old-fashioned way.
 %    \begin{macrocode}
 \group_begin:
-\tex_lccode:D `A = `-
-\tex_lccode:D `N = `N
-\tex_lccode:D `V = `V
-\tex_lowercase:D
-  {
-    \group_end:
-    \tl_const:Nn \c_novalue_tl { ANoValue- }
-  }
+\tex_catcode:D `- = 11 ~
+\tl_const:Nx \c_novalue_tl { - NoValue \token_to_str:N - }
+\group_end:
 %    \end{macrocode}
 % \end{variable}
 %
