Revert "Format expandable errors closer to other errors (see #931)"

--- a/l3kernel/l3file.dtx
+++ b/l3kernel/l3file.dtx
@@ -1845,14 +1845,14 @@
 %    \begin{macrocode}
 \cs_new_protected:Npn \iow_allow_break:
   {
-    \__kernel_msg_error:nnxx { kernel } { iow-indent }
-      { \iow_char:N\\iow_wrap:nnnN } { \iow_char:N\\iow_allow_break: }
+    \__kernel_msg_error:nnnn { kernel } { iow-indent }
+      { \iow_wrap:nnnN } { \iow_allow_break: }
   }
 \cs_new:Npx \@@_allow_break: { \c_@@_wrap_allow_break_marker_tl }
 \cs_new:Npn \@@_allow_break_error:
   {
-    \__kernel_msg_expandable_error:nnff { kernel } { iow-indent }
-      { \iow_char:N\\iow_wrap:nnnN } { \iow_char:N\\iow_allow_break: }
+    \__kernel_msg_expandable_error:nnnn { kernel } { iow-indent }
+      { \iow_wrap:nnnN } { \iow_allow_break: }
   }
 %    \end{macrocode}
 % \end{macro}
@@ -1872,8 +1872,8 @@
 %    \begin{macrocode}
 \cs_new_protected:Npn \iow_indent:n #1
   {
-    \__kernel_msg_error:nnfff { kernel } { iow-indent }
-      { \iow_char:N\\iow_wrap:nnnN } { \iow_char:N\\iow_indent:n } {#1}
+    \__kernel_msg_error:nnnnn { kernel } { iow-indent }
+      { \iow_wrap:nnnN } { \iow_indent:n } {#1}
     #1
   }
 \cs_new:Npx \@@_indent:n #1
@@ -1884,8 +1884,8 @@
   }
 \cs_new:Npn \@@_indent_error:n #1
   {
-    \__kernel_msg_expandable_error:nnfff { kernel } { iow-indent }
-      { \iow_char:N\\iow_wrap:nnnN } { \iow_char:N\\iow_indent:n } {#1}
+    \__kernel_msg_expandable_error:nnnnn { kernel } { iow-indent }
+      { \iow_wrap:nnnN } { \iow_indent:n } {#1}
     #1
   }
 %    \end{macrocode}
@@ -3731,7 +3731,7 @@
     File~names~must~contain~balanced~numbers~of~quotes~(").
   }
 \__kernel_msg_new:nnnn { kernel } { iow-indent }
-  { #2~outside~#1~(arg~1) }
+  { Only~#1 (arg~1)~allows~#2 }
   {
     The~command~#2 can~only~be~used~in~messages~
     which~will~be~wrapped~using~#1.
