more code review

--- a/l3kernel/l3keys.dtx
+++ b/l3kernel/l3keys.dtx
@@ -1611,9 +1611,9 @@
   { \exp_args:No \@@_define:nnn \l_@@_module_str }
 \cs_new_protected:Npn \@@_define:nnn #1#2#3
   {
-    \str_set:Nx \l_@@_module_str { \@@_trim_spaces:n {#2} }
+    \__kernel_tl_set:Nx \l_@@_module_str { \@@_trim_spaces:n {#2} }
     \keyval_parse:NNn \@@_define:n \@@_define:nn {#3}
-    \str_set:Nn \l_@@_module_str {#1}
+    \__kernel_tl_set:Nx \l_@@_module_str {#1}
   }
 %    \end{macrocode}
 % \end{macro}
@@ -1667,12 +1667,12 @@
 %   and storing the text before and after it. Everything is turned into
 %   strings, so there is no problem using an \texttt{x}-type expansion. Since
 %   \cs{@@_trim_spaces:n} will turn its argument into a string anyway, this
-%   function uses \cs{cs_set_nopar:Npx} instead of \cs{tl_set:Nx} to gain some
+%   function uses \cs{__kernel_tl_set:Nx} instead of \cs{tl_set:Nx} to gain some
 %   speed.
 %    \begin{macrocode}
 \cs_new_protected:Npn \@@_property_find:n #1
   {
-    \cs_set_nopar:Npx \l_@@_property_str { \@@_trim_spaces:n { #1 } }
+    \__kernel_tl_set:Nx \l_@@_property_str { \@@_trim_spaces:n { #1 } }
     \exp_after:wN \@@_property_find_auxi:w \l_@@_property_str
       \s_@@_nil \@@_property_find_auxii:w
       . \s_@@_nil \@@_property_find_err:w
@@ -1685,22 +1685,22 @@
     #1 \s_@@_mark #2 \s_@@_nil \@@_property_find_auxii:w . \s_@@_nil
     \@@_property_find_err:w
   {
-    \cs_set_nopar:Npx \l_keys_path_str
+    \__kernel_tl_set:Nx \l_keys_path_str
       { \str_if_empty:NF \l_@@_module_str { \l_@@_module_str / } #1 }
     \@@_property_find_auxi:w #2 \s_@@_nil \@@_property_find_auxiii:w . \s_@@_nil
       \@@_property_find_auxiv:w
   }
 \cs_new_protected:Npn \@@_property_find_auxiii:w #1 \s_@@_mark
   {
-    \cs_set_nopar:Npx \l_keys_path_str { \l_keys_path_str . #1 }
+    \__kernel_tl_set:Nx \l_keys_path_str { \l_keys_path_str . #1 }
     \@@_property_find_auxi:w
   }
 \cs_new_protected:Npn \@@_property_find_auxiv:w
     #1 \s_@@_nil \@@_property_find_auxiii:w
     \s_@@_mark \s_@@_nil \@@_property_find_auxiv:w
   {
-    \cs_set_nopar:Npx \l_@@_property_str { . #1 }
-    \cs_set_nopar:Npx \l_keys_path_str
+    \__kernel_tl_set:Nx \l_@@_property_str { . #1 }
+    \__kernel_tl_set:Nx \l_keys_path_str
       { \exp_after:wN \@@_trim_spaces:n \exp_after:wN { \l_keys_path_str } }
     \tl_set_eq:NN \l_keys_path_tl \l_keys_path_str
   }
@@ -2478,9 +2478,9 @@
   { \exp_args:No \@@_set:nnn \l_@@_module_str }
 \cs_new_protected:Npn \@@_set:nnn #1#2#3
   {
-    \cs_set_nopar:Npx \l_@@_module_str { \@@_trim_spaces:n {#2} }
+    \__kernel_tl_set:Nx \l_@@_module_str { \@@_trim_spaces:n {#2} }
     \keyval_parse:NNn \@@_set_keyval:n \@@_set_keyval:nn {#3}
-    \cs_set_nopar:Npn \l_@@_module_str {#1}
+    \__kernel_tl_set:Nx \l_@@_module_str {#1}
   }
 %    \end{macrocode}
 % \end{macro}
@@ -2533,7 +2533,7 @@
 \cs_generate_variant:Nn \keys_set_known:nn { nV , nv , no }
 \cs_new_protected:Npn \@@_set_known:nnn #1#2#3
   {
-    \use:e
+    \use:x
       {
         \bool_set_true:N \exp_not:N \l_@@_only_known_bool
         \bool_set_false:N \exp_not:N \l_@@_filtered_bool
@@ -2609,7 +2609,7 @@
 \cs_generate_variant:Nn \keys_set_filter:nnn { nnV , nnv , nno }
 \cs_new_protected:Npn \@@_set_filter:nnnn #1#2#3#4
   {
-    \use:e
+    \use:x
       {
         \bool_set_false:N \exp_not:N \l_@@_only_known_bool
         \bool_set_true:N \exp_not:N \l_@@_filtered_bool
@@ -2715,10 +2715,10 @@
     \bool_if:NTF \l_@@_selective_bool
       \@@_set_selective:
       \@@_execute:
-    \cs_set_nopar:Npn \l_@@_module_str {#1}
+    \__kernel_tl_set:Nx \l_@@_module_str {#1}
   }
 %    \end{macrocode}
-%   This function uses \cs{cs_set_nopar:Npx} internally for performance reasons,
+%   This function uses \cs{__kernel_tl_set:Nx} internally for performance reasons,
 %   the argument |#1| is already a string in every usage, so turning it into a
 %   string again seems unnecessary.
 %    \begin{macrocode}
@@ -2734,19 +2734,19 @@
 \cs_new_protected:Npn \@@_find_key_module_auxii:Nw
     #1 #2 \s_@@_mark #3 \s_@@_nil \@@_find_key_module_auxii:Nw
   {
-    \cs_set_nopar:Npx #1 { \tl_if_empty:NF #1 { #1 / } #2 }
+    \__kernel_tl_set:Nx #1 { \tl_if_empty:NF #1 { #1 / } #2 }
     \@@_find_key_module_auxi:Nw #1 #3 \s_@@_nil \@@_find_key_module_auxiii:Nw
   }
 \cs_new_protected:Npn \@@_find_key_module_auxiii:Nw #1 #2 \s_@@_mark
   {
-    \cs_set_nopar:Npx #1 { \tl_if_empty:NF #1 { #1 / } #2 }
+    \__kernel_tl_set:Nx #1 { \tl_if_empty:NF #1 { #1 / } #2 }
     \@@_find_key_module_auxi:Nw #1
   }
 \cs_new_protected:Npn \@@_find_key_module_auxiv:Nw
     #1 #2 \s_@@_nil #3 \s_@@_mark
     \s_@@_nil \@@_find_key_module_auxiv:Nw #4
   {
-    \cs_set_nopar:Npn #4 { #2 }
+    \__kernel_tl_set:Nx #4 { #2 }
   }
 %    \end{macrocode}
 %  If selective setting is active, there are a number of possible sub-cases
@@ -2890,7 +2890,7 @@
         \cs_if_exist:cT
           { \c_@@_code_root_str ##1 / \l_keys_key_str }
           {
-            \cs_set_nopar:Npn \l_@@_inherit_str {##1}
+            \str_set:Nn \l_@@_inherit_str {##1}
             \cs_if_exist_use:c { \c_@@_validate_root_str ##1 / \l_keys_key_str }
             \@@_execute:no { ##1 / \l_keys_key_str } \l_keys_value_tl
             \clist_map_break:n \use_none:n
@@ -2970,12 +2970,12 @@
   {
     \__kernel_tl_set:Nx \l_@@_relative_tl
       { \exp_args:No \@@_trim_spaces:n \l_@@_relative_tl }
-    \use:e
+    \use:x
       {
         \cs_set_protected:Npn \@@_store_unused:w
-          ##1 \l_@@_relative_tl /
-          ##2 \l_@@_relative_tl /
-          ##3 \s_@@_stop
+          ####1 \l_@@_relative_tl /
+          ####2 \l_@@_relative_tl /
+          ####3 \s_@@_stop
       }
         {
           \tl_if_blank:nF {##1}
@@ -2996,7 +2996,7 @@
                 { = { \exp_not:o \l_keys_value_tl } }
             }
         }
-    \use:e
+    \use:x
       {
         \@@_store_unused:w \l_keys_path_str
           \l_@@_relative_tl / \l_@@_relative_tl /
