Correct an internal function name
See #939.

--- a/l3kernel/l3text-case.dtx
+++ b/l3kernel/l3text-case.dtx
@@ -166,7 +166,7 @@
 % \begin{macro}[EXP]{\@@_change_case_char:nnnN, \@@_change_case_char_aux:nnnN}
 % \begin{macro}[EXP]{\@@_change_case_char_UTFviii:nnnNN}
 % \begin{macro}[EXP]{\@@_change_case_char_UTFviii:nnnNNN}
-% \begin{macro}[EXP]{\@@_change_case_char_UTFviii:nnnNNNNN}
+% \begin{macro}[EXP]{\@@_change_case_char_UTFviii:nnnNNNN}
 % \begin{macro}[EXP]{\@@_change_case_char_UTFviii:nnnn}
 % \begin{macro}[EXP]
 %   {
@@ -644,7 +644,7 @@
       { \@@_change_case_char_UTFviii:nnnn {#1} {#2} {#3} {#4#5} }
     \cs_new:Npn \@@_change_case_char_UTFviii:nnnNNN #1#2#3#4#5#6
       { \@@_change_case_char_UTFviii:nnnn {#1} {#2} {#3} {#4#5#6} }
-    \cs_new:Npn \@@_change_case_char_UTFviii:nnnNNNNN #1#2#3#4#5#6#7
+    \cs_new:Npn \@@_change_case_char_UTFviii:nnnNNNN #1#2#3#4#5#6#7
       { \@@_change_case_char_UTFviii:nnnn {#1} {#2} {#3} {#4#5#6#7} }
     \cs_new:Npn \@@_change_case_char_UTFviii:nnnn #1#2#3#4
       {
